Criado rota para login, juntamente com autenticação jwt

--- a/config.default.ini
+++ b/config.default.ini
@@ -8,3 +8,10 @@ PROJECT_VERSION =
 
 [DATABASE]
 URI = 
+
+
+[JWT]
+EXPIRE_MINUTES = 60
+#ALGORITIMO QUE SERÁ USADO NA CRIAÇÃO DO TOKEN
+ALGORITHM = HS256
+SECRET_KEY = "your secret key"
